--- a/Machine Learning/Run in NodeJS/package.json
+++ b/Machine Learning/Run in NodeJS/package.json
@@ -21,6 +21,7 @@
     "@tensorflow/tfjs": "^3.15.0",
     "brain.js": "^2.0.0-beta.15",
     "express": "^4.17.3",
+    "gpu.js": "^2.15.2",
     "mathjs": "^10.4.3"
   }
 }
